2024-11-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/gcc-torture-execute-pr44575.c:
	  Redisable one test that turned out to fail for z80-related ports (bug #3799).

2024-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/gcc-torture-execute-20000706-1.c,
	  support/regression/tests/gcc-torture-execute-20081103-1.c,
	  support/regression/tests/gcc-torture-execute-950607-2.c,
	  support/regression/tests/gcc-torture-execute-pr44575.c:
	  Enable further struct parameter tests.

2024-11-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3231.c:
	  Enable test for f8.
	* support/regression/tests/gcc-torture-execute-20050826-1.c:
	  Enable test for stm8.

2024-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def,
	  src/z80/gen.c:
	  Unify formatting of conditional jump asm for z80-related ports.

2024-11-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/ato.c:
	  Disable atoll test for pdk15 due to lack of target RAM.

2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/imove.cc:
	  Fix simulation of f8 N and Z flags.
	* src/f8/main.c:
	  Use Z flag of 16-bit load to shorten startup code.
	* src/f8/peeph.def:
	  Optimize out some f8 tst, tstw where N and Z flags were already set by previous instructions, optimize jumps.
	* src/f8/peep.c:
	  Fix calculation of relative jump distance over f8 xch instruction.
	* src/f8/gen.c:
	  Improve f8 code generation for conditional jumps; improve value caching.

2024-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c,
	  src/f8/gen.c,
	  src/f8/peeph.def:
	  Improve code for conditional branches in f8 port.
	* device/include/stdlib.h,
	  device/lib/strtoll.c,
	  device/lib/strtoull.c,
	  device/lib/wcstoll.c,
	  device/lib/wcstoull.c:
	  Partial fix for bug #3798, to get atoll.
